# raskl-rag

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  TODO.md  docker-compose.alibaba.yml  docker-compose.yml  open-webui.Dockerfile  pyproject.toml
.github/workflows/: deploy.yml  pr-cleanup.yml  pr-preview.yml
apps/admin/: Dockerfile  pyproject.toml
apps/admin/src/ras_admin/: api.py  auth.py  config.py  db.py  diff.py  s3.py
apps/admin/src/ras_admin/templates/: base.html  dashboard.html  diff.html  document_detail.html  documents.html  login.html  pipeline.html  upload.html
apps/chat_ui/: README.md  pyproject.toml
apps/chat_ui/src/ras_chat_ui/: __init__.py  agent.py  app.py  config.py  reranker.py  retriever.py  tools.py
apps/chat_ui/src/ras_chat_ui/providers/: __init__.py  base.py  bedrock_embed.py  bedrock_llm.py  bedrock_rerank.py  local_rerank.py  vllm_llm.py
apps/chunker_indexer/: README.md  pyproject.toml
apps/chunker_indexer/src/ras_chunker/: __init__.py  chunker.py  cli.py  config.py  db.py  embedder.py  fc_handler.py  lambda_handler.py  loader.py  page_filter.py  pipeline.py  restitch.py  schema.py
apps/chunker_indexer/src/ras_chunker/providers/: __init__.py  bedrock_embed.py  model_studio_embed.py  vllm_embed.py
apps/chunker_indexer/tests/: test_chunker.py  test_restitch.py
apps/docproc/: Dockerfile  README.md  pyproject.toml
apps/docproc/src/ras_docproc/: cli.py  config.py  diff.py  fc_handler.py  lambda_handler.py  notify.py  schema.py
apps/docproc/src/ras_docproc/pipeline/: boilerplate.py  classify_doctype.py  detect_captions.py  detect_content_area.py  detect_figures.py  detect_footnotes.py  detect_language.py  detect_rotation.py  enrich_metadata_llm.py  enrich_metadata_web.py  export_jsonl.py  extract_deepseek.py  extract_docling.py  extract_metadata.py  extract_mupdf.py  extract_qwen3vl.py  inventory.py  link_footnote_refs.py  normalize_text.py  report_html.py
apps/docproc/src/ras_docproc/templates/: report.html.j2
apps/docproc/src/ras_docproc/utils/: geometry.py  hashing.py  io.py  text.py
apps/docproc/tests/: conftest.py  test_block_boundaries.py  test_deepseek_extraction.py  test_deepseek_ocr.py  test_e2e_pipeline.py  test_footnote_classification.py  test_metadata_enrichment.py  test_utils.py
apps/rag_engine/: Dockerfile  README.md  pyproject.toml
apps/rag_engine/src/ras_rag_engine/: __init__.py  agent.py  api.py  citations.py  config.py  reranker.py  retriever.py  tools.py
apps/rag_engine/src/ras_rag_engine/providers/: __init__.py  base.py  bedrock_embed.py  bedrock_llm.py  bedrock_rerank.py  local_embed.py  model_studio_embed.py  model_studio_llm.py  model_studio_rerank.py  vllm_llm.py
apps/rag_engine/src/ras_rag_engine/tools/: __init__.py  browse.py  document_context.py  figures.py  keyword_search.py  mbras_index.py  search_attribute.py  search_basic.py  utils.py
apps/rag_engine/tests/: test_browse_corpus.py  test_citations.py  test_metadata_filters.py
apps/upload/: handler.py  template.html
apps/vllm_launcher/: pyproject.toml
apps/vllm_launcher/src/ras_vllm_launcher/: __init__.py  cli.py  download.py
docker/api/: Dockerfile
docker/chat/: Dockerfile
docker/chunker/: Dockerfile
docker/docproc/: Dockerfile
infra/: .terraform.lock.hcl  api-gateway.tf  dns.tf  ecr.tf  iam.tf  lambda-admin.tf  lambda-chat.tf  lambda-chunker.tf  lambda-db-init.tf  lambda-docproc.tf  lambda-rag-api.tf  lambda-upload.tf  main.tf  neon.tf  open-webui.tf  outputs.tf  s3.tf  ses.tf  transcribe-vocab.csv  transcribe.tf  variables.tf
infra-alibaba/: .terraform.lock.hcl  acr.tf  fc-test.tf  fc.tf  logging.tf  main.tf  open-webui.tf  oss.tf  outputs.tf  polardb.tf  ram.tf  terraform.tfvars  variables.tf
infra/lambda-db-init/: handler.py
infra/lambda-upload/: handler.py
scripts/: backfill_pipeline_status.py  backfill_volume_issue.py  build-fc-packages.sh  compare_ocr.py  diagnose_rag.py  docproc-clean.sh  docproc-messy.sh  docproc.sh  embed-light.sh  embed.sh  full-pipeline-light.sh  full-pipeline.sh  init-db.sql  jesse-mode.sh  lib.sh  migrate_to_neon.py  start-api.sh  start-chat-light.sh  start-chat.sh  start-services.sh  upload_all.sh
scripts/random/: diagnose_rag.py  migrate_to_neon.py  render_page.py  upload_all.sh
tests/: conftest.py
tests/e2e/: test_metadata_filters.py  test_retrieval_benchmark.py
