[project]
name = "raskl-rag"
version = "0.1.0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["apps/*"]
exclude = ["apps/upload"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["apps/docproc/tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
