[project]
name = "ras-chat-ui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gradio",
    "httpx",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pydantic-settings>=2.0",
    "duckduckgo-search>=7.0",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
cloud = ["boto3>=1.34"]

[project.scripts]
ras-chat-ui = "ras_chat_ui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ras_chat_ui"]
