[project]
name = "ras-chat-ui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ras-rag-engine",
    "gradio",
]

[project.optional-dependencies]
cloud = ["boto3>=1.34"]

[project.scripts]
ras-chat-ui = "ras_chat_ui.app:main"

[tool.uv.sources]
ras-rag-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ras_chat_ui"]
