[project]
name = "ras-rag-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pydantic-settings>=2.0",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",
    "python-dotenv",
]

[project.optional-dependencies]
cloud = ["boto3>=1.34", "openai>=1.0"]

[project.scripts]
ras-rag-api = "ras_rag_engine.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ras_rag_engine"]
