[project]
name = "ras-vllm-launcher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click",
    "httpx",
    "rich",
    "huggingface-hub>=0.20",
]

[project.scripts]
ras-vllm-launcher = "ras_vllm_launcher.cli:cli"

[project.optional-dependencies]
gpu = ["vllm>=0.16.1rc1.dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ras_vllm_launcher"]
